@@ -1,9 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.1.0-rc-2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.1.0-rc-2 https://maven.apache.org/xsd/maven-4.1.0-rc-2.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.github.caciocavallosilano</groupId>
     <artifactId>cacio</artifactId>
-    <version>1.19-SNAPSHOT</version>
+    <version>1.18-SNAPSHOT</version>
   </parent>
   <artifactId>cacio-tta</artifactId>
   <packaging>jar</packaging>
@@ -13,7 +13,7 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.8.2</version>
+        <version>5.12.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -27,8 +27,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
     </dependency>
     <dependency>
       <groupId>com.github.caciocavallosilano</groupId>
@@ -45,17 +45,6 @@
       <artifactId>jide-oss</artifactId>
       <version>3.6.18</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
-    <dependency>
-      <groupId>net.bytebuddy</groupId>
-      <artifactId>byte-buddy</artifactId>
-      <version>1.14.11</version>
-    </dependency>
-    <dependency>
-      <groupId>net.bytebuddy</groupId>
-      <artifactId>byte-buddy-agent</artifactId>
-      <version>1.14.11</version>
-    </dependency>
   </dependencies>
 
   <build>
@@ -65,8 +54,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-	  <source>${cacio.java.version}</source>
-	  <target>${cacio.java.version}</target>
+          <source>17</source>
+          <target>17</target>
           <compilerArgs>
             <arg>-XDignore.symbol.file=true</arg>
             <arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
@@ -75,6 +64,7 @@
             <arg>--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
             <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
             <arg>--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
           </compilerArgs>
         </configuration>
       </plugin>
